Visual adjustments: 2x2 features grid, redesigned unlimited section with animations

--- a/index.html
+++ b/index.html
@@ -99,33 +99,80 @@
             </div>
         </section>
 
-        <!-- No Limits Section -->
+        <!-- No Limits Section - Redesigned -->
         <section id="beneficios" class="unlimited">
             <div class="container">
-                <div class="unlimited-grid">
-                    <div class="unlimited-content">
-                        <span class="badge"
-                            style="background: rgba(59, 130, 246, 0.1); color: #3b82f6; border-color: rgba(59, 130, 246, 0.2);">Sem
-                            Limites</span>
-                        <h2 class="section-title"
-                            style="text-align: left; background: none; -webkit-text-fill-color: initial; color: #fff;">
-                            Cresça sem barreiras</h2>
-                        <p style="color: var(--text-secondary); margin-bottom: 32px; font-size: 1.125rem;">
-                            Diferente de outras plataformas, na Tudo1 o seu crescimento não é penalizado. Oferecemos uma
-                            estrutura robusta para escalar sua operação.
-                        </p>
-                        <ul class="detail-list">
-                            <li><i class="fa-solid fa-check-circle"></i> Usuários Ilimitados</li>
-                            <li><i class="fa-solid fa-check-circle"></i> Contatos Ilimitados</li>
-                            <li><i class="fa-solid fa-check-circle"></i> Disparos Ilimitados</li>
-                            <li><i class="fa-solid fa-check-circle"></i> Funis de Vendas Ilimitados</li>
-                            <li><i class="fa-solid fa-check-circle"></i> Integrações Nativas</li>
-                        </ul>
+                <div class="unlimited-header">
+                    <span class="badge unlimited-badge">
+                        <i class="fa-solid fa-infinity"></i> Sem Limites
+                    </span>
+                    <h2 class="section-title">Cresça sem barreiras</h2>
+                    <p class="section-subtitle">Diferente de outras plataformas, na Tudo1 o seu crescimento não é
+                        penalizado.</p>
+                </div>
+
+                <div class="unlimited-cards">
+                    <div class="unlimited-card">
+                        <div class="infinity-icon">
+                            <i class="fa-solid fa-infinity"></i>
+                        </div>
+                        <div class="unlimited-card-content">
+                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-label">Usuários</span>
+                        </div>
+                        <div class="card-glow"></div>
                     </div>
-                    <div class="unlimited-image-container">
-                        <img src="assets/images/dashboard-preview.png" alt="Dashboard Tudo1" class="dashboard-preview"
-                            style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 20px 50px rgba(0,0,0,0.5); border: 1px solid var(--border-color);">
+
+                    <div class="unlimited-card">
+                        <div class="infinity-icon">
+                            <i class="fa-solid fa-infinity"></i>
+                        </div>
+                        <div class="unlimited-card-content">
+                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-label">Contatos</span>
+                        </div>
+                        <div class="card-glow"></div>
                     </div>
+
+                    <div class="unlimited-card">
+                        <div class="infinity-icon">
+                            <i class="fa-solid fa-infinity"></i>
+                        </div>
+                        <div class="unlimited-card-content">
+                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-label">Disparos</span>
+                        </div>
+                        <div class="card-glow"></div>
+                    </div>
+
+                    <div class="unlimited-card">
+                        <div class="infinity-icon">
+                            <i class="fa-solid fa-infinity"></i>
+                        </div>
+                        <div class="unlimited-card-content">
+                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-label">Funis de Vendas</span>
+                        </div>
+                        <div class="card-glow"></div>
+                    </div>
+
+                    <div class="unlimited-card">
+                        <div class="infinity-icon">
+                            <i class="fa-solid fa-infinity"></i>
+                        </div>
+                        <div class="unlimited-card-content">
+                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-label">Automações</span>
+                        </div>
+                        <div class="card-glow"></div>
+                    </div>
+                </div>
+
+                <div class="unlimited-cta">
+                    <p>Estrutura robusta para escalar sua operação sem custos extras por crescimento.</p>
+                    <a href="#planos" class="btn btn-primary">
+                        <i class="fa-solid fa-rocket"></i> Ver Planos
+                    </a>
                 </div>
             </div>
         </section>
