--- a/index.html
+++ b/index.html
@@ -407,12 +407,12 @@
 
                             <div class="result-cta-box">
                                 <div class="cta-icon">
-                                    <i class="fa-solid fa-headset"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </div>
                                 <div class="cta-text">
-                                    <h4>Um especialista entrará em contato!</h4>
-                                    <p>Em breve você receberá uma mensagem no WhatsApp para tirar dúvidas e conhecer a
-                                        plataforma.</p>
+                                    <h4>Simulação salva com sucesso!</h4>
+                                    <p>Seus dados foram registrados. Se quiser, fale com um especialista quando
+                                        preferir.</p>
                                 </div>
                             </div>
 
@@ -421,9 +421,9 @@
                                     <i class="fa-solid fa-rotate"></i>
                                     Nova Simulação
                                 </button>
-                                <a href="#planos" class="btn btn-primary">
-                                    <i class="fa-solid fa-rocket"></i>
-                                    Ver Planos
+                                <a href="#contato" class="btn btn-primary">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                    Falar com Especialista
                                 </a>
                             </div>
                         </div>
