Add interest/qualification field to calculator, send lead data on resimulation

--- a/index.html
+++ b/index.html
@@ -324,6 +324,16 @@
                                     <input type="tel" id="lead-phone" placeholder="WhatsApp (com DDD)" required>
                                     <i class="fa-brands fa-whatsapp"></i>
                                 </div>
+                                <div class="form-group form-select-group">
+                                    <select id="lead-interest" title="Selecione seu interesse" required>
+                                        <option value="" disabled selected>O que mais te interessa?</option>
+                                        <option value="disparos">📱 Disparos em Massa (WhatsApp)</option>
+                                        <option value="crm">📊 CRM e Gestão de Leads</option>
+                                        <option value="ia">🤖 Automação com IA</option>
+                                        <option value="completo">🚀 Plataforma Completa</option>
+                                    </select>
+                                    <i class="fa-solid fa-bullseye"></i>
+                                </div>
                                 <button type="submit" class="btn btn-primary btn-calc">
                                     <i class="fa-solid fa-unlock"></i>
                                     Ver Meu Resultado
