Add dynamic CTA based on ROI result

--- a/index.html
+++ b/index.html
@@ -415,14 +415,14 @@
                                 </div>
                             </div>
 
-                            <div class="result-cta-box">
+                            <div class="result-cta-box" id="result-cta-box">
                                 <div class="cta-icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                                    <i class="fa-solid fa-rocket" id="result-cta-icon"></i>
                                 </div>
                                 <div class="cta-text">
-                                    <h4>Simulação salva com sucesso!</h4>
-                                    <p>Seus dados foram registrados. Se quiser, fale com um especialista quando
-                                        preferir.</p>
+                                    <h4 id="result-cta-title">Seu potencial é enorme! 🚀</h4>
+                                    <p id="result-cta-text">Com esse ROI, você pode escalar suas vendas no WhatsApp.
+                                        Vamos conversar?</p>
                                 </div>
                             </div>
 
