Add WhatsApp button with webhook + pre-filled message

--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
                                     <i class="fa-solid fa-rotate"></i>
                                     Nova Simulação
                                 </button>
-                                <a href="#contato" class="btn btn-primary">
+                                <button class="btn btn-primary" id="btn-whatsapp-contact">
                                     <i class="fa-brands fa-whatsapp"></i>
                                     Falar com Especialista
-                                </a>
+                                </button>
                             </div>
                         </div>
                     </div>
