--- a/index.html
+++ b/index.html
@@ -714,11 +714,13 @@
             <div class="modal-content">
                 <h3>Agende sua Demonstração</h3>
                 <p>Escolha o melhor horário para falar com nosso consultor especialista.</p>
-                <!-- Paste your GHL Calendar Embed Code Here -->
-                <div class="calendar-placeholder">
-                    <i class="fa-regular fa-calendar-days"></i>
-                    <p>Carregando agenda...</p>
-                    <small>(Cole seu código de embed do GHL aqui)</small>
+
+                <!-- GHL Calendar Embed -->
+                <div class="calendar-embed-container">
+                    <iframe src="https://api.leadconnectorhq.com/widget/booking/na0alOd8CYNzEmtRdYGg"
+                        style="width: 100%;border:none;overflow: hidden;" scrolling="no"
+                        id="na0alOd8CYNzEmtRdYGg_1769918615413"></iframe><br>
+                    <script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
                 </div>
             </div>
         </div>
