--- a/index.html
+++ b/index.html
@@ -55,10 +55,20 @@
                     Oficial.</p>
                 <div class="hero-actions">
                     <a href="#contato" class="btn btn-primary">Falar com Consultor</a>
-                    <a href="#demo" class="btn btn-outline" id="btn-demo">Ver Demonstração</a>
+                    <button class="btn btn-outline" id="btn-demo" type="button">Ver Demonstração</button>
                 </div>
             </div>
         </section>
+
+        <!-- ... -->
+
+        <!-- GHL Calendar Embed -->
+        <div class="calendar-embed-container">
+            <iframe src="https://api.leadconnectorhq.com/widget/booking/na0alOd8CYNzEmtRdYGg"
+                style="width: 100%;border:none;overflow: hidden;" scrolling="no" id="na0alOd8CYNzEmtRdYGg_1769918615413"
+                title="Calendário de Agendamento"></iframe><br>
+            <script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
+        </div>
 
         <!-- Solutions Section -->
         <section id="solucoes" class="features">
