Fix: remove duplicate calendar embed outside modal

--- a/index.html
+++ b/index.html
@@ -60,16 +60,6 @@
             </div>
         </section>
 
-        <!-- ... -->
-
-        <!-- GHL Calendar Embed -->
-        <div class="calendar-embed-container">
-            <iframe src="https://api.leadconnectorhq.com/widget/booking/na0alOd8CYNzEmtRdYGg"
-                style="width: 100%;border:none;overflow: hidden;" scrolling="no" id="na0alOd8CYNzEmtRdYGg_1769918615413"
-                title="Calendário de Agendamento"></iframe><br>
-            <script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
-        </div>
-
         <!-- Solutions Section -->
         <section id="solucoes" class="features">
             <div class="container">
@@ -589,6 +579,7 @@
                                 <option value="crm">CRM e Funis de Vendas</option>
                                 <option value="ia">Atendimento com IA</option>
                                 <option value="completo">Solução Completa</option>
+                                <option value="agendar">📅 Quero Agendar uma Demonstração</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-primary btn-submit">
