Improve: redesign Unlimited section with contextual icons

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 <div class="unlimited-cards">
                     <div class="unlimited-card">
                         <div class="infinity-icon">
-                            <i class="fa-solid fa-infinity"></i>
+                            <i class="fa-solid fa-users"></i>
                         </div>
                         <div class="unlimited-card-content">
-                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-value" data-value="∞">Ilimitado</span>
                             <span class="unlimited-label">Usuários</span>
                         </div>
                         <div class="card-glow"></div>
@@ -125,10 +125,10 @@
 
                     <div class="unlimited-card">
                         <div class="infinity-icon">
-                            <i class="fa-solid fa-infinity"></i>
+                            <i class="fa-solid fa-address-book"></i>
                         </div>
                         <div class="unlimited-card-content">
-                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-value" data-value="∞">Ilimitado</span>
                             <span class="unlimited-label">Contatos</span>
                         </div>
                         <div class="card-glow"></div>
@@ -136,10 +136,10 @@
 
                     <div class="unlimited-card">
                         <div class="infinity-icon">
-                            <i class="fa-solid fa-infinity"></i>
+                            <i class="fa-solid fa-paper-plane"></i>
                         </div>
                         <div class="unlimited-card-content">
-                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-value" data-value="∞">Ilimitado</span>
                             <span class="unlimited-label">Disparos</span>
                         </div>
                         <div class="card-glow"></div>
@@ -147,10 +147,10 @@
 
                     <div class="unlimited-card">
                         <div class="infinity-icon">
-                            <i class="fa-solid fa-infinity"></i>
+                            <i class="fa-solid fa-filter"></i>
                         </div>
                         <div class="unlimited-card-content">
-                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-value" data-value="∞">Ilimitado</span>
                             <span class="unlimited-label">Funis de Vendas</span>
                         </div>
                         <div class="card-glow"></div>
@@ -158,10 +158,10 @@
 
                     <div class="unlimited-card">
                         <div class="infinity-icon">
-                            <i class="fa-solid fa-infinity"></i>
+                            <i class="fa-solid fa-robot"></i>
                         </div>
                         <div class="unlimited-card-content">
-                            <span class="unlimited-value" data-value="∞">∞</span>
+                            <span class="unlimited-value" data-value="∞">Ilimitado</span>
                             <span class="unlimited-label">Automações</span>
                         </div>
                         <div class="card-glow"></div>
