--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="container hero-content">
-                <div class="badge"
-                    style="display: inline-flex; align-items: center; gap: 8px; border-color: rgba(24, 119, 242, 0.3); background: rgba(24, 119, 242, 0.1); color: #1877F2;">
+                <div class="badge meta-badge">
                     <i class="fa-brands fa-meta"></i> Parceiro Oficial & API Meta
                 </div>
                 <h1>Solução <span>Tudo em 1</span> para vendas e marketing no WhatsApp</h1>
