Feat: add Login button to header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                     <li><a href="#solucoes">Soluções</a></li>
                     <li><a href="#planos">Planos</a></li>
                     <li><a href="#calculadora">Simulador</a></li>
+                    <li><a href="https://app.tudo1.com.br" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-outline" style="padding: 8px 20px; font-size: 0.9rem;">Entrar</a></li>
                     <li><a href="#contato" class="btn btn-primary btn-mobile-highlight" style="padding: 8px 24px;">Falar
                             Conosco</a></li>
                 </ul>
