feat: SEO optimization - Updated H1/H2, meta tags, sitemap, and image names

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo1 CRM | A Solução Completa para Vendas e Marketing</title>
     <meta name="description"
-        content="Sua plataforma completa de CRM, Marketing e Vendas no WhatsApp. Sem limites de usuários e disparos.">
+        content="Gerencie leads, faça disparos em massa via WhatsApp API Oficial e automatize seu marketing com o CRM Tudo1. A solução ideal para escalar suas vendas sem bloqueios.">
+    <link rel="canonical" href="https://tudo1.com.br/">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +26,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/images/logo-final.png" alt="Tudo1 Logo">
+                <img src="assets/images/crm-tudo1-logo.png" alt="Tudo1 Logo">
             </div>
             <div class="mobile-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -51,7 +52,7 @@
                 <div class="badge meta-badge">
                     <i class="fa-brands fa-meta"></i> Parceiro Oficial & API Meta
                 </div>
-                <h1>Solução <span>Tudo em 1</span> para vendas e marketing no WhatsApp</h1>
+                <h1>Tudo1: CRM com <span>WhatsApp API Oficial</span> para Vendas e Marketing</h1>
                 <p>A solução definitiva para sua empresa. CRM, Funis, IA e Disparos em Massa com a segurança da API
                     Oficial.</p>
                 <div class="hero-actions">
@@ -64,7 +65,7 @@
         <!-- Solutions Section -->
         <section id="solucoes" class="features">
             <div class="container">
-                <h2 class="section-title">Tudo o que você precisa</h2>
+                <h2 class="section-title">Recursos do CRM Tudo1</h2>
                 <p class="section-subtitle">Ferramentas robustas integradas em uma única plataforma para escalar seu
                     negócio.</p>
 
@@ -107,7 +108,7 @@
                     <span class="badge unlimited-badge">
                         <i class="fa-solid fa-infinity"></i> Sem Limites
                     </span>
-                    <h2 class="section-title">Cresça sem barreiras</h2>
+                    <h2 class="section-title">Escalabilidade Ilimitada para seu Negócio</h2>
                     <p class="section-subtitle">Diferente de outras plataformas, na Tudo1 o seu crescimento não é
                         penalizado.</p>
                 </div>
@@ -181,7 +182,7 @@
         <!-- Integrations (Brief) -->
         <section id="integracoes" class="features" style="background: var(--surface-color);">
             <div class="container">
-                <h2 class="section-title">Poder do Ecossistema</h2>
+                <h2 class="section-title">Integrações do Ecossistema Tudo1</h2>
                 <p class="section-subtitle">Integrações nativas e robustez de software de classe mundial.</p>
                 <div
                     style="display: flex; gap: 40px; justify-content: center; align-items: center; flex-wrap: wrap; opacity: 0.5;">
@@ -206,7 +207,7 @@
                 <span class="badge calculator-badge">
                     <i class="fa-solid fa-calculator"></i> Simulador Gratuito
                 </span>
-                <h2 class="section-title">Simule sua Campanha de Disparos</h2>
+                <h2 class="section-title">Simulador de ROI para Disparos de WhatsApp</h2>
                 <p class="section-subtitle">Descubra o custo real e o potencial de retorno antes de começar</p>
 
                 <div class="calculator-card">
@@ -671,6 +672,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- Trusted By Section -->
+        <section id="clientes"
+            style="padding: 60px 0; background: var(--background-color); border-top: 1px solid rgba(255,255,255,0.05);">
+            <div class="container">
+                <h2 class="section-title" style="font-size: 1.5rem; margin-bottom: 40px; text-align: center;">Quem
+                    confia na Tudo1</h2>
+                <div
+                    style="display: flex; justify-content: center; align-items: center; gap: 60px; flex-wrap: wrap; opacity: 0.7;">
+                    <!-- Substitua pelos logos reais -->
+                    <h3 style="color: var(--text-color); font-weight: 700;">METROPOLITANA</h3>
+                    <h3 style="color: var(--text-color); font-weight: 700;">FIMCA</h3>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -678,9 +694,13 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="logo">
-                        <img src="assets/images/logo-final.png" alt="Tudo1 Logo">
+                        <img src="assets/images/crm-tudo1-logo.png" alt="Tudo1 Logo">
                     </div>
                     <p>A solução completa para vendas e marketing no WhatsApp.</p>
+                    <div style="margin-top: 20px; font-size: 0.85rem; opacity: 0.7; line-height: 1.6;">
+                        <p>CNPJ: 00.000.000/0001-00</p>
+                        <p>Endereço: Av. Digital, 1000 - Sede Virtual</p>
+                    </div>
                 </div>
                 <div class="footer-links">
                     <h4>Navegação</h4>
