feat: added Vercel Analytics script

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+    <!-- Vercel Analytics -->
+    <script>
+        window.va = window.va || function () { (window.va.q = window.va.q || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
