--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
 
+    <!-- Vercel Speed Insights -->
+    <script>
+        window.si = window.si || function () { (window.si.q = window.si.q || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
