feat: updated favicon to optimized version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Gerencie leads, faça disparos em massa via WhatsApp API Oficial e automatize seu marketing com o CRM Tudo1. A solução ideal para escalar suas vendas sem bloqueios.">
     <link rel="canonical" href="https://tudo1.com.br/">
-    <link rel="icon" type="image/png" href="assets/images/crm-tudo1-logo.png">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
