--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
                                     <i class="fa-solid fa-users"></i>
                                     Quantos contatos tem na sua lista?
                                 </label>
-                                <input type="number" id="calc-contacts" placeholder="Ex: 5000" min="1">
+                                <input type="number" id="calc-contacts" placeholder="Ex: 5000" min="1"
+                                    style="pointer-events: auto !important; position: relative; z-index: 9999;">
                                 <span class="input-hint">Quantidade de pessoas que receberão a mensagem</span>
                             </div>
 
@@ -252,7 +253,8 @@
                                     <i class="fa-solid fa-envelope"></i>
                                     Tipo de mensagem
                                 </label>
-                                <select id="calc-type">
+                                <select id="calc-type"
+                                    style="pointer-events: auto !important; position: relative; z-index: 9999;">
                                     <option value="marketing">Marketing (promoções, ofertas, novidades)</option>
                                     <option value="utility">Utility (lembretes, confirmações, status)</option>
                                 </select>
@@ -264,7 +266,8 @@
                                     <i class="fa-solid fa-chart-line"></i>
                                     Cenário de conversão esperado
                                 </label>
-                                <select id="calc-scenario">
+                                <select id="calc-scenario"
+                                    style="pointer-events: auto !important; position: relative; z-index: 9999;">
                                     <option value="pessimista">🔴 Pessimista (1% de conversão)</option>
                                     <option value="realista" selected>🟡 Realista (3% de conversão)</option>
                                     <option value="otimista">🟢 Otimista (5% de conversão)</option>
@@ -279,7 +282,8 @@
                                 </label>
                                 <div class="input-with-prefix">
                                     <span class="input-prefix">R$</span>
-                                    <input type="number" id="calc-ticket" placeholder="500" min="1" value="500">
+                                    <input type="number" id="calc-ticket" placeholder="500" min="1" value="500"
+                                        style="pointer-events: auto !important; position: relative; z-index: 9999;">
                                 </div>
                                 <span class="input-hint">Valor médio que cada cliente paga por compra</span>
                             </div>
