fix(html): removed GHL form_embed.js script that was causing errors

--- a/index.html
+++ b/index.html
@@ -744,8 +744,7 @@
                 <div class="calendar-embed-container">
                     <iframe src="https://api.leadconnectorhq.com/widget/booking/na0alOd8CYNzEmtRdYGg"
                         style="width: 100%;border:none;overflow: hidden;" scrolling="no"
-                        id="na0alOd8CYNzEmtRdYGg_1769918615413"></iframe><br>
-                    <script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
+                        id="na0alOd8CYNzEmtRdYGg_1769918615413" title="Agendamento de Demonstração"></iframe>
                 </div>
             </div>
         </div>
