feat(seo): updated calculator title and added schema markup for better ranking

--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Schema Markup for Calculator -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Calculadora de Disparos WhatsApp Tudo1",
+      "operatingSystem": "Web",
+      "applicationCategory": "BusinessApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "BRL"
+      },
+      "description": "Calculadora gratuita para simular custos e ROI de disparos em massa via WhatsApp API Oficial."
+    }
+    </script>
 </head>
 
 <body>
@@ -220,8 +237,14 @@
                 <span class="badge calculator-badge">
                     <i class="fa-solid fa-calculator"></i> Simulador Gratuito
                 </span>
-                <h2 class="section-title">Simulador de ROI para Disparos de WhatsApp</h2>
-                <p class="section-subtitle">Descubra o custo real e o potencial de retorno antes de começar</p>
+                <h2 class="section-title">Calculadora de Disparos WhatsApp e Simulador de ROI</h2>
+                <p class="section-subtitle">Descubra o custo real e o potencial de retorno antes de começar.</p>
+                <p
+                    style="text-align: center; max-width: 800px; margin: 0 auto 32px; color: var(--text-secondary); font-size: 0.95rem;">
+                    Nossa <strong>calculadora de disparo de WhatsApp</strong> ajuda você a planejar suas campanhas de
+                    marketing.
+                    Simule custos, taxas de conversão e veja quanto pode lucrar com a API Oficial.
+                </p>
 
                 <div class="calculator-card">
                     <!-- Step 1: Calculator Inputs -->
